--- a/.github/workflows/develop_app-prod-fms-vfq.yml
+++ b/.github/workflows/develop_app-prod-fms-vfq.yml
@@ -23,9 +23,9 @@ jobs:
 
     - name: npm install, build, and test
       run: |
+        export NODE_OPTIONS="--max-old-space-size=8192"
         npm install
         npm run build --if-present
-        npm run test --if-present
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
