--- a/.github/workflows/main_app-prod-fms-vfq.yml
+++ b/.github/workflows/main_app-prod-fms-vfq.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
 
+env:
+  AZURE_WEBAPP_NAME: app-prod-fms-vfq
+  AZURE_WEBAPP_PACKAGE_PATH: './dist/hypernet-platform'
+  NODE_VERSION: '10.x'
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -17,7 +22,8 @@ jobs:
 
     steps:
       - name: 'Checkout Github Action'
-        uses: actions/checkout@master
+        uses: actions/checkout@main
+      - name: Use Node.js ${{ env.NODE_VERSION }}
 
       - name: Cache node modules
         uses: actions/setup-node@v1
@@ -42,4 +48,4 @@ jobs:
           app-name: 'app-prod-fms-vfq'
           slot-name: Production
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_8d32ac58fa7f4ef4bc581c104e7f9522 }}
-          package: .
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
