--- a/.github/workflows/develop_app-prod-fms-vfq1.yml
+++ b/.github/workflows/develop_app-prod-fms-vfq1.yml
@@ -15,13 +15,18 @@ jobs:
     steps:
     # checkout the repo
     - name: 'Checkout Github Action'
-      uses: actions/checkout@master
+      uses: actions/checkout@develop
 
 
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
         node-version: '12.13.0'
+        
+    - name: Node ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
 
     - name: npm install, build, and test
       run: |
@@ -36,4 +41,3 @@ jobs:
         slot-name: Production
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_ECB5FFF526874EC7B6436E19A7D18019 }}
         package: .
-
