--- a/.github/workflows/develop_app-prod-fms-vfq1.yml
+++ b/.github/workflows/develop_app-prod-fms-vfq1.yml
@@ -15,14 +15,14 @@ jobs:
     steps:
     # checkout the repo
     - name: 'Checkout Github Action'
-      uses: actions/checkout@develop
+      uses: actions/checkout@v1
 
 
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
         node-version: '12.13.0'
-        
+
     - name: Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
