--- a/.github/workflows/develop_app-prod-fms-vfq1.yml
+++ b/.github/workflows/develop_app-prod-fms-vfq1.yml
@@ -30,10 +30,8 @@ jobs:
 
     - name: npm install, build, and test
       run: |
-        export NODE_OPTIONS="--max-old-space-size=8192"
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        npm run att --if-present
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
