--- a/.github/workflows/staging_app-stag.yml
+++ b/.github/workflows/staging_app-stag.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: 'Checkout Github Action'
-        uses: actions/checkout@staging
+        uses: actions/checkout@main
 
       - name: Cache node modules
         uses: actions/setup-node@v1
